[package]
name = "rust-devcontainer"
version = "0.1.0"
edition = "2021"

[dependencies]
teloxide = { version = "0.12", features = ["macros"] }
log = "0.4"
pretty_env_logger = "0.4"
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
mongodb = "2.4"
serde = "1.0"
bson = { version = "2.6", features = ["chrono-0_4"] } # Needed for using chrono datetime in doc
chrono = "0.4" # Used for setting DateTimes
